re PR c/8224 (Incorrect joining of signed and unsigned division)

PR c/8224
	* fold-const.c (extract_muldiv_1): Don't pass through type conversions
	when signedness changes for division or modulus.

From-SVN: r65012